Fixed the spacing on the title on the main page, also changed the way comments look

--- a/public-file-upload/public/main.css
+++ b/public-file-upload/public/main.css
@@ -22,7 +22,7 @@ a:hover {
   border-style: none;
   margin: 0 auto;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 70px;
 }
 
 #main-content{
